# sound-lab

./: CLAUDE.md  DONE.md  README.md  TODO.md
text2jingle/: .env.example  .gitignore  README.md  pyproject.toml
text2jingle/docs/: research.md
text2jingle/src/text2jingle/: cli.py  config.py  models.py  output.py
text2jingle/src/text2jingle/backends/: __init__.py  base.py  elevenlabs_music.py  replicate_musicgen.py
web/: .env.example  .gitignore  README.md  pyproject.toml
web/src/soundlab_web/: app.py  config.py  models.py
web/src/soundlab_web/routers/: dashboard.py  jingle.py  settings.py  synth.py
web/src/soundlab_web/services/: jingle_service.py  settings_service.py
web/src/soundlab_web/static/css/: style.css
web/src/soundlab_web/static/js/: synth.js
web/src/soundlab_web/templates/: base.html  dashboard.html
web/src/soundlab_web/templates/settings/: index.html
web/src/soundlab_web/templates/tools/jingle/: _error.html  _form.html  _history.html  _progress.html  _result.html  index.html
web/src/soundlab_web/templates/tools/synth/: index.html
